--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -15,9 +15,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'citipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mapi_keys\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m weather_api_key\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Import citipy to determine the cities based on latitude and longitude\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcitipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m citipy\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'citipy'"
+     ]
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -311,13 +324,7 @@
       "City not found. Skipping...\n",
       "Processing Record 30 of Set 4 | kokopo\n",
       "Processing Record 31 of Set 4 | yellowknife\n",
-      "Processing Record 32 of Set 4 | sao miguel do araguaia\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 32 of Set 4 | sao miguel do araguaia\n",
       "Processing Record 33 of Set 4 | belmonte\n",
       "Processing Record 34 of Set 4 | pisco\n",
       "Processing Record 35 of Set 4 | ambilobe\n",
@@ -522,13 +529,7 @@
       "Processing Record 21 of Set 8 | mahina\n",
       "Processing Record 22 of Set 8 | kamloops\n",
       "Processing Record 23 of Set 8 | santa rosalia\n",
-      "Processing Record 24 of Set 8 | nerchinskiy zavod\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 24 of Set 8 | nerchinskiy zavod\n",
       "Processing Record 25 of Set 8 | torrington\n",
       "Processing Record 26 of Set 8 | krutikha\n",
       "Processing Record 27 of Set 8 | bonavista\n",
@@ -727,13 +728,7 @@
       "Processing Record 10 of Set 12 | bandarbeyla\n",
       "Processing Record 11 of Set 12 | antofagasta\n",
       "Processing Record 12 of Set 12 | vila franca do campo\n",
-      "Processing Record 13 of Set 12 | bauta\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 13 of Set 12 | bauta\n",
       "Processing Record 14 of Set 12 | nsanje\n",
       "Processing Record 15 of Set 12 | xuchang\n",
       "Processing Record 16 of Set 12 | todos santos\n",
